hard-gists/98b59370a1d171817edb/run.log
=== Docker Run Log for 98b59370a1d171817edb ===
Started at: Mi 29. Okt 18:34:43 CET 2025

[2025-10-29 18:34:43] START: Running container for 98b59370a1d171817edb
[2025-10-29 18:34:44] SUCCESS: Container 2b45b08a83ca673c3824ce159ab5350adba6573baeb74fd56d0b533eb269117c started for 98b59370a1d171817edb
=== Container logs for 98b59370a1d171817edb ===
  File "/snippet.py", line 57
    print 'Torque = %.2f Nm' % t
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 98b59370a1d171817edb ===
[2025-10-29 18:34:46] INFO: Container 2b45b08a83ca673c3824ce159ab5350adba6573baeb74fd56d0b533eb269117c has stopped
